--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "http-proxy": "^1.17.0",
     "install": "^0.12.2",
     "npm": "^6.9.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
