--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ coverage
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
 dist/
+
+public/description.js
+public/homePics.js
+public/moreHomes.js
+public/reviews.js
+public/vendor.js
