Update npm start and build scripts

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node server/index.js",
     "test": "mocha tests/backendTests.js --exit",
-    "build": "webpack -d --watch"
+    "build": "webpack -p",
+    "webpack": "webpack -d --watch"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
