--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
+    "express-static-gzip": "^1.1.3",
     "file-loader": "^3.0.1",
     "http-proxy": "^1.17.0",
     "install": "^0.12.2",
@@ -34,8 +35,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-styled-components": "^1.10.0",
+    "brotli-webpack-plugin": "^1.1.0",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "compression-webpack-plugin": "^2.0.0",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -43,7 +46,7 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
